added to victorsGarage

--- a/csc372-hw/victorsGarage/style.css
+++ b/csc372-hw/victorsGarage/style.css
@@ -1,9 +1,61 @@
+body {
+    font-family: 'STIX Two Text', serif;
+    background-color: #F7F7EE;
+    color: #404040;
+    font-size: 17pt;
+    margin: 40px;
+
+}
+
+.containter{
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    background-image: url(sources/headingmainpicture.png);
+    background-size: cover;
+    background-position: bottom;
+    padding: 75px;
+    align-items: center;
+
 h1 {
     background-color: antiquewhite;
     border: 10px solid rgb(0, 0, 0);
-    padding: 20px;
-    margin: 10px;
+    padding: 25px;
+    margin: 8px;
+    font-family: 'Rubik Glitch Pop', sans-serif; 
+    font-size: 60px;
+}
 
+}
+
+h2, h3 {
+    background-color: antiquewhite;
+    border: 10px solid rgb(0, 0, 0);
+    padding: 20px;
+    margin: 70px;
+    font-family: 'STIX Two Text', serif;
+    font-size: 30px;
+}
+
+.small-blue {
+    background-color: #007bff00;
+    display: flex;
+
+
+}
+
+main {
+    display: flex;
+    height: 20%;
+}
+
+figure {
+    background-color: #ff0000;
+    flex: 3;
+    margin: 20px;
     justify-content: center;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
