progressed on term project

--- a/csc372-hw/victorsGarage/style.css
+++ b/csc372-hw/victorsGarage/style.css
@@ -2,12 +2,12 @@ body {
     font-family: 'STIX Two Text', serif;
     background-color: #F7F7EE;
     color: #404040;
-    font-size: 17pt;
+    font-size: 20pt;
     margin: 40px;
 
 }
 
-.containter{
+.containter {
     display: flex;
     flex-direction: column;
 }
@@ -15,47 +15,128 @@ body {
 .header {
     display: flex;
     justify-content: center;
+    padding: 40px;
     background-image: url(sources/headingmainpicture.png);
     background-size: cover;
     background-position: bottom;
-    padding: 75px;
     align-items: center;
 
-h1 {
-    background-color: antiquewhite;
-    border: 10px solid rgb(0, 0, 0);
-    padding: 25px;
-    margin: 8px;
-    font-family: 'Rubik Glitch Pop', sans-serif; 
-    font-size: 60px;
+    h1 {
+        background-color: antiquewhite;
+        border: 17px solid rgb(0, 0, 0);
+        border-style: double;
+        padding: 20px;
+        margin: 8px;
+        font-family: 'Rubik Glitch Pop', sans-serif;
+        font-size: 60px;
+    }
 }
 
-}
 
 h2, h3 {
     background-color: antiquewhite;
-    border: 10px solid rgb(0, 0, 0);
-    padding: 20px;
-    margin: 70px;
+    border: 12px solid rgb(0, 0, 0);
+    border-style: double;
+    padding: 10px;
     font-family: 'STIX Two Text', serif;
-    font-size: 30px;
+    font-size: 25px;
 }
 
-.small-blue {
+nav {
     background-color: #007bff00;
     display: flex;
-
-
+    justify-content: center;
+    font-style: italic;
 }
 
 main {
     display: flex;
-    height: 20%;
+    background-color: #9e9e9e;
+
 }
 
-figure {
-    background-color: #ff0000;
-    flex: 3;
-    margin: 20px;
+figure {    
+    background-color: antiquewhite;
+    border: 10px;
+    border-style: inset;
+    padding: 20px;
+    margin: 10px;
     justify-content: center;
+    justify-content: space-evenly;
+
+}
+
+
+figure img {
+    background-color: #F7F7EE;
+    height: 300px;
+    border: 10px;
+    padding: 20px;
+    margin: 10px;
+}
+
+section{
+    background-color: antiquewhite;
+        border: 17px solid rgb(0, 0, 0);
+        border-style: double;
+        padding: 20px;
+        margin: 8px;
+        font-size: 20px;
+}
+
+
+.grid{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+
+
+.product img{
+    background-color: antiquewhite;
+    border: 5px dotted black;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
+    height: 200px;
+}
+
+.details {
+    background-color: #F7F7EE;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px;
+    text-align: center;
+}
+
+.detailFigure{
+    display: flex;
+    background-color: antiquewhite;
+    border: 10px;
+    border-style: inset;
+    padding: 20px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.detailImg {
+    background-color: #F7F7EE;
+    height: 550px;
+    border: 10px;
+    padding: 20px;
+    margin: 10px;
+}
+
+.detailInfo{
+    background-color: #F7F7EE;
+
+    padding: 10px;
+    margin: 8px;
+    font-size: 20px;
+    flex: 1;
+    text-align: left;
 }
